# switchplane

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/: labeler.yml  release.yml
.github/workflows/: ci.yml  labeler.yml  publish.yml  www.yml
docs/: white-paper.md
examples/chatbot/: pyproject.toml
examples/chatbot/chatbot/: app.py  config.toml
examples/chatbot/chatbot/agents/bot/: agent.py
examples/chatbot/chatbot/agents/bot/tasks/: chat.py
examples/devops/: pyproject.toml
examples/devops/devops/: app.py  config.toml
examples/devops/devops/agents/sre/: agent.py
examples/devops/devops/agents/sre/tasks/: review.py
examples/hello/: pyproject.toml
examples/hello/hello/: app.py
examples/hello/hello/agents/example/: agent.py
examples/hello/hello/agents/example/tasks/: hello.py
examples/weather/: pyproject.toml
examples/weather/weather/: app.py
examples/weather/weather/agents/weather/: agent.py
examples/weather/weather/agents/weather/tasks/: watch.py
src/switchplane/: __init__.py  __main__.py  _util.py  agent.py  agent_runtime.py  app.py  checkpoint.py  cli.py  config.py  control_plane.py  daemon.py  discovery.py  fmt.py  llm.py  logging.py  mcp.py  oauth.py  persistence.py  protocol.py  scaffold.py  shell.py  subprocess_manager.py  task.py  transport.py  tui.py  usage.py
tests/: conftest.py  test_agent.py  test_agent_runtime.py  test_app.py  test_checkpoint.py  test_cli.py  test_config.py  test_control_plane.py  test_daemon.py  test_discovery.py  test_inter_task.py  test_llm.py  test_mcp.py  test_oauth.py  test_persistence.py  test_protocol.py  test_shell.py  test_subprocess_manager.py  test_task.py  test_transport.py  test_tui.py  test_usage.py
tests/e2e/: conftest.py  test_hello.py
www/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
www/public/: CNAME  robots.txt  sitemap.xml
www/src/: App.tsx
www/src/components/: Comparison.tsx  Features.tsx  Footer.tsx  Hero.tsx  LocalFirst.tsx  Pillars.tsx  Quickstart.tsx  TerminalRecording.tsx
www/src/styles/: index.css
