[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "switchplane[llm]",
    "pandas",
    "numpy",
]

[project.scripts]
devops = "devops.app:main"

[tool.hatch.build.targets.wheel]
packages = ["devops"]

[tool.hatch.build.targets.wheel.force-include]
"devops/config.toml" = "devops/config.toml"
